<?xml version="1.0"?>
<package format="2">
    <name>ip_camera</name>
    <version>3.1.0</version>
    <description>Ipcamera pubilisher.</description>

    <maintainer email="1337875013@qq.com"></maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>sensor_msgs</depend>
    <depend>roscpp</depend>
    <depend>rosconsole</depend>

    <build_depend>zed_interfaces</build_depend>

    <exec_depend>image_transport_plugins</exec_depend>


</package>

