<?xml version="1.0"?>
<package format="2">
  <name>robot_msgs</name>
  <version>1.0.0</version>
  <description>bit robot msgs and srvs</description>
  <maintainer email="moyang602@163.com">moyang</maintainer>
  <license>BSD</license>
  <author email="moyang602@163.com">moyang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>serial_dev_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
